Updated map view with proper google maps api syntax

--- a/templates/views/view_analytics.hbs
+++ b/templates/views/view_analytics.hbs
@@ -35,7 +35,7 @@
 				</tbody>
 			</table>
 		</div>
-		<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCXJY4VMiLrIrr9hUGMOw8QvUOtJM3j6zw&callback=initMap" async defer></script>
+		<script src="https://maps.googleapis.com/maps/api/js?key={{{api_key}}}&callback=initMap" async defer></script>
 		<script src="/js/view_analytics.js"></script>
 	</body>
 </html>
